# omega-dynamic-dispatch

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml
template/: .gitignore  NOTICE.jinja  README.md.jinja  pyproject.toml.jinja
template/src/{{ project_slug }}/: cli.py
template/src/{{ project_slug }}/core/: click_factory.py  dispatch.py  errors.py  plugins.py  results.py
template/src/{{ project_slug }}/plugins/: check.py  ingest.py
tests/: test_copier_template.py
